small style setup

--- a/templates/settings.twig
+++ b/templates/settings.twig
@@ -421,19 +421,19 @@
 						<p class="text-center text-template-background font-italic h5 mt-1">Administrador</p>
 						<div class="d-flex flex-row">
 							<button class="btn btn-link btn-sm" onclick="loadDataFirstLogin();"><i id="iconButtonUpdateSUPER" class="fas fa-sync-alt text-mycolor h5 mt-2"></i></button>
-							<p class="pt-2 pl-2">Obtener comprobantes por primera vez.</p>
+							<p class="pl-2" style="margin-bottom: 0; line-height: 46px;">Obtener comprobantes por primera vez.</p>
 						</div>
 						<div class="d-flex flex-row">
 							<button class="btn btn-link btn-sm" onclick="updateSuperVouchers();"><i id="iconBtnUpdateSUPER" class="fas fa-sync-alt text-mycolor h5 mt-2"></i></button>
-							<p class="pt-2 pl-2">Analizar y cargar comprobantes emitidos no encontrados.</p>
+							<p class="pl-2" style="margin-bottom: 0; line-height: 46px;">Analizar y cargar comprobantes emitidos no encontrados.</p>
 						</div>
 						<div class="d-flex flex-row">
 							<button class="btn btn-link btn-sm" onclick="loadProductsFromDetails();"><i id="iconButtonGetDetailSUPER" class="fas fa-sync-alt text-mycolor h5 mt-2"></i></button>
-							<p class="pt-2 pl-2">Cargar artículos por comprobantes emitidos.</p>
+							<p class="pl-2" style="margin-bottom: 0; line-height: 46px;">Cargar artículos por comprobantes emitidos.</p>
 						</div>
 						<div class="d-flex flex-row">
 							<button class="btn btn-link btn-sm" onclick="loadCustomers();" title="Se crean los clientes que se hayan encontrado en Sigecom y no en EFactura."><i id="iconBtnLoadCustomersEfactura" class="fas fa-sync-alt text-mycolor h5 mt-2"></i></button>
-							<p class="pt-2 pl-2">Cargar clientes en EFactura.</p>
+							<p class="pl-2" style="margin-bottom: 0; line-height: 46px;">Cargar clientes en EFactura.</p>
 						</div>
 						<div class="d-flex flex-row">
 							<button class="btn btn-danger shadow-sm ml-2 mt-2 w-100" onclick="eliminarEmpresa();" title="Eliminar empresa permanentemente."><i class="fas fa-trash-alt"></i> Eliminar Empresa</button>
