--- a/public/styles/stylesDefault/globalStyles.css
+++ b/public/styles/stylesDefault/globalStyles.css
@@ -283,3 +283,18 @@ tr.isStockBelowMinimum {
 #selectTypeVoucher:focus{
   box-shadow: 0px 0px 4px 2px #63BBB2 !important;
 }
+
+
+.input-group + .input-group {
+  margin-top: .2rem;
+}
+
+.input-group.form-control {
+  height: revert;
+  padding-left: .2rem;
+  left: -0.2rem;
+}
+
+.custom-file-label::after {
+  content: "Seleccionar" !important;
+}
