--- a/templates/priceList.twig
+++ b/templates/priceList.twig
@@ -15,7 +15,8 @@
 		<div class="card-body pt-2">
 			<div class="d-flex justify-content-between mb-1">
 				<div class="input-group w-50 shadow-sm ml-0 mb-1">
-					<input id="inputToSearch" type="text" class="form-control form-control-sm shadow-sm" onchange="searchProduct()" onkeyup="this.onchange()" placeholder="Buscar artículo...">
+					{# <input id="inputToSearch" type="text" class="form-control form-control-sm shadow-sm" onchange="searchProduct()" onkeyup="this.onchange()" placeholder="Buscar artículo..."> #}
+					<input id="inputToSearch" type="text" class="form-control form-control-sm shadow-sm" onchange="searchProduct(event)" onkeyup="searchProduct(event)" placeholder="Buscar artículo...">
 				</div>
 				<div class="d-flex">
 					{# <div class="col mb-1" style="min-width: 170px; max-width: 250px;"> #}
