--- a/templates/priceList.twig
+++ b/templates/priceList.twig
@@ -17,6 +17,7 @@
 				<div class="input-group w-50 shadow-sm ml-0 mb-1">
 					{# <input id="inputToSearch" type="text" class="form-control form-control-sm shadow-sm" onchange="searchProduct()" onkeyup="this.onchange()" placeholder="Buscar artículo..."> #}
 					<input id="inputToSearch" type="text" class="form-control form-control-sm shadow-sm" onchange="searchProduct(event)" onkeyup="searchProduct(event)" placeholder="Buscar artículo...">
+					<button id="searchBarCleaner" title="Borrar busqueda" class="ml-2 btn background-template-color2 btn-sm shadow-sm d-none" onclick="cleanSearchBar()"> <i class="fas fa-backspace"></i> </button>
 				</div>
 				<div class="d-flex">
 					{# <div class="col mb-1" style="min-width: 170px; max-width: 250px;"> #}
