--- a/templates/pointsale.twig
+++ b/templates/pointsale.twig
@@ -8,7 +8,7 @@
 			<h5>Punto de venta</h5>
 		</div>
 		<div class="card-body">
-			<div class="row">
+			<div class="row" style="margin-right: 0; margin-left: 0;">
 				<div id="clientSelection" class="col p-0 pr-1" style="max-width: 280px;">
 					<div class="border rounded shadow-sm p-2" style="height: 100%;">
 						<div class="d-flex justify-content-center ml-3 mb-4">
